--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -1,9 +1,17 @@
 
 p {
-    position: fixed;
-    width: 90%;   /* == (50vw - (width of vertical scrollbar)) */
-    height: 20%;  /* == (50vh - (height of horizontal scrollbar)) */
-    margin: 2%;   /* == (5vw - (width of vertical scrollbar)) */
-    padding: 2%;  /* == (5vw - (width of vertical scrollbar)) */
+    position: relative;
+    width: 90%;   
+    height: 20%;  
+    margin: 2%;   
+    padding: 2%;  
     border-style: solid;
   }
+
+.searchBar{
+    width: 90%;   
+    position : absolute;
+    margin: 2%;     
+    
+    
+}
