--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -1,5 +1,5 @@
 
-p {
+/*p {
     position: relative;
     width: 90%;   
     height: 20%;  
@@ -14,4 +14,4 @@ p {
     margin: 2%;     
     
     
-}
+}*/
